RENW-119 Revert css styling

--- a/react/MainMenu/Desktop/main-menu.css
+++ b/react/MainMenu/Desktop/main-menu.css
@@ -19,7 +19,7 @@
 }
 
 .primary-nav__list-item:focus-within .main-menu__mega-nav-wrapper,
-.primary-nav__list-item .main-menu__mega-nav-wrapper {
+.primary-nav__list-item:hover .main-menu__mega-nav-wrapper {
   display: block;
 }
 
