RENW-119 Add units to gap css

--- a/react/MainMenu/Desktop/main-menu.css
+++ b/react/MainMenu/Desktop/main-menu.css
@@ -39,7 +39,7 @@
 
 .main-menu__mega-nav {
   display: flex;
-  gap: 1;
+  gap: 16px;
   justify-content: space-between;
   padding: 2rem 0rem;
   text-align: left;
